I don't even know what time it is

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -1,11 +1,11 @@
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Startpage" />
-	<meta name="keywords" content="Startpage" />
-	<meta name="description" content="Startpage" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+	<meta name="description" content="Startpage"/>
+	<meta name="keywords" content="Startpage"/>
+	<meta name="description" content="Startpage"/>
 	<title>Startpage</title>
 
-	<link type="text/css" href="style.css" rel="stylesheet" />
+	<link type="text/css" href="style.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 			<a href="https://www.reddit.com/r/unixporn">Rice</a>
 			<a href="https://www.reddit.com/r/linux">Linux</a>
 			<a href="https://www.reddit.com/r/showerthoughts">Showerthoughts</a>
-			<a href="https://www.reddit.com/r/"></a>			
+			<a href="https://www.reddit.com/r/">/r/</a>			
 		</div>
 	</div>
 </body>
